--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "react-scripts": "0.6.1"
   },
   "dependencies": {
+    "lodash": "^4.16.6",
+    "moment": "^2.15.2",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
     "react-router": "^2.8.1"
@@ -20,7 +22,9 @@
   "eslintConfig": {
     "extends": "react-app",
     "rules": {
-      "semi": [2]
+      "semi": [
+        2
+      ]
     }
   }
 }
