--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-redux-loading-bar": "^2.4.0",
     "react-router": "^2.8.1",
     "redux": "^3.6.0",
+    "redux-actions": "^0.13.0",
     "redux-thunk": "^2.1.0"
   },
   "scripts": {
